# pyvis

./: .gitignore  .mcp.json  ACCORDION_UPDATE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  COMPLETE_IMPROVEMENTS_SUMMARY.md  CONSOLE_ERROR_FIX.md  CORRECT_API_USAGE.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY_2025-12-04.md  IMPROVEMENTS_ROUND_2.md  INSTALLATION.md  MANIFEST.in  OPTIMIZATION_REPORT.md  QUICK_INSTALL.md  README.md  RECENT_UPDATES.md  SHINY_EDGE_EDITING_README.md  SHINY_ENHANCEMENTS.md  SHINY_INTEGRATION_IMPROVEMENTS.md  SHINY_LEGEND_INTEGRATION.md  SHINY_LEGEND_SUMMARY.md  SHINY_QUICKSTART.md  SHINY_QUICK_START.md  auto_version.py  benchmark_improvements.py  build_package.bat  bump_version.py  create_conda_env.bat  environment.yml  install_local.bat  legend_custom_example.py  legend_example.py  pyproject.toml  setup.py  shiny_advanced_demo.py  shiny_example.py  shiny_integration_demo.py  (+7 more)
.claude/skills/release-notes/: SKILL.md
.githooks/: commit-msg
.github/workflows/: ci.yml  conda-publish.yml  docs.yml  release.yml
conda.recipe/: bld.bat  build.sh  meta.yaml  recipe.yaml
docs/: API_REFERENCE.md  CHANGELOG-codebase-fixes.md  EDGE_ATTRIBUTE_EDITING.md  LEGEND_FEATURE.md  SHINY_INTEGRATION_GUIDE.md  conf.py  documentation.rst  introduction.rst  tutorial.rst
docs/plans/: 2026-02-22-multi-tab-demo-design.md  2026-02-22-multi-tab-demo-plan.md  2026-02-22-shiny-implementation-plan.md  2026-02-22-shiny-integration-redesign.md  2026-02-23-notebooks-demos-plan.md  2026-02-23-notebooks-demos-update-design.md  2026-02-23-typed-options-design.md  2026-02-23-typed-options-plan.md
examples/: edge_attribute_editing_example.py  shiny_demo.py  shiny_editor_demo.py  shiny_simple_demo.py
notebooks/: 01_basics.ipynb  02_networkx.ipynb  03_typed_options.ipynb  04_advanced.ipynb  NetworkOfThrones.csv  dot.html  example4.html  example5.html  example6.html  nx.html
pyvis/: __init__.py  _version.py  base.py  edge.py  network.py  node.py  options.py  physics.py  utils.py  vis_config.py
pyvis/shiny/: __init__.py  bindings.js  styles.css  wrapper.py
pyvis/templates/: animation_template.html  template.html
pyvis/templates/lib/bindings/: utils.js
pyvis/tests/: requirements.txt  test_comprehensive.py  test_error_handling.py  test_graph.py  test_html.py  test_network_basic.py  test_security.py  test_shiny_error_handling.py  test_shiny_integration.py  test_typed_integration.py  test_typed_shiny.py  test_types_base.py  test_types_common.py  test_types_config.py  test_types_edges.py  test_types_network.py  test_types_nodes.py  test_types_physics.py  test_types_validation.py  test_ui_alignment.py  test_utils.py  test_version_check.py  test_versioning.py
pyvis/types/: __init__.py  base.py  common.py  configure.py  edges.py  interaction.py  layout.py  manipulation.py  network.py  nodes.py  physics.py
